# Euro2024

./: .gitignore  README.md  main.py  pyproject.toml  run.bat
db/: predictions.db
src/: connector.py  db_operations.py  gui.py  informations.py
