[tool.poetry]
name = "euro2024"
version = "0.3.0"
description = ""
authors = ["astralopitek <marcinloboda11@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ttkbootstrap = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
